function(add_utils2_benchmark name)
    if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/bench_${name}.cpp")
        message(STATUS "Skipping bench_${name} (source file not found)")
        return()
    endif()
    add_executable(bench_${name} bench_${name}.cpp)
    target_link_libraries(bench_${name} PRIVATE utils2)
    target_compile_features(bench_${name} PRIVATE cxx_std_26)
endfunction()

add_utils2_benchmark(distance_transform)
add_utils2_benchmark(connected_components)
add_utils2_benchmark(pathfinding)
add_utils2_benchmark(spatial_index)
add_utils2_benchmark(thread_pool)
add_utils2_benchmark(lru_cache)
